packages/tailwindcss/src/components/toast.css
/**
 * Copyright 2025 LY Corporation
 *
 * LY Corporation licenses this file to you under the Apache License,
 * version 2.0 (the "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at:
 *
 *   https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations
 * under the License.
 */
.toaster {
}

.toast {
  --toast-fg: var(--fg-neutral-primary);
  --toast-fg-secondary: var(--fg-neutral-secondary);
  --toast-fg-warning: var(--fg-tint-orange);
  --toast-fg-success: var(--fg-tint-green);
  --toast-fg-error: var(--fg-tint-red);
  --toast-fg-informative: var(--fg-tint-blue);
  --toast-border: var(--border-neutral-tertiary);
  --toast-border-warning: var(--border-tint-orange);
  --toast-border-success: var(--border-tint-green);
  --toast-border-error: var(--border-tint-red);
  --toast-border-informative: var(--border-tint-blue);
  --toast-bg: var(--bg-neutral-primary);

  @apply !absolute !left-0 inline-flex min-w-[356px] items-center space-x-2 border bg-[var(--toast-bg)] px-5 py-4;

  /* default */
  @apply toast-radius-medium toast-default;
}

.toast-content {
  @apply flex flex-1 flex-col items-start justify-center;
}

.toast-title {
  @apply text-title-h5 flex flex-1 flex-col text-[var(--toast-fg)];
}

.toast-description {
  @apply text-base-normal text-[var(--toast-fg-secondary)];
}

.toast-button {
  @apply flex-shrink-0;
}

.toast-close {
  @apply order-1 flex-shrink-0 !px-0;
}

.toast-icon {
  @apply relative box-content w-5 flex-shrink-0 p-1;

  /* default */
  @apply toast-icon-default;
}

.toast-loader {
  @apply flex scale-100;
}

